logs/hw/sensor-expanded.h

typedef __uint8_t uint8_t ;
typedef __uint16_t uint16_t ;
typedef __uint32_t uint32_t ;
void os_init(int (*fn)(int argc, char **argv));
typedef uint32_t os_time_t;
struct os_event;
typedef void os_event_fn(struct os_event *ev);
struct os_event {

    uint8_t ev_queued;





    os_event_fn *ev_cb;

    void *ev_arg;

    struct { struct os_event *stqe_next; } ev_next;
};
struct os_dev;
struct os_dev {

    struct os_dev_handlers od_handlers;

    os_dev_init_func_t od_init;

    void *od_init_arg;

    uint8_t od_stage;

    uint8_t od_priority;




    uint8_t od_open_ref;

    uint8_t od_flags;

    const char *od_name;
    struct { struct os_dev *stqe_next; } od_next;
};
struct os_mutex {
    struct { struct os_task *slh_first; } mu_head;
    uint8_t _pad;

    uint8_t mu_prio;

    uint16_t mu_level;

    struct os_task *mu_owner;
};
struct sensor;
typedef enum {

    SENSOR_TYPE_NONE = 0,

    SENSOR_TYPE_ACCELEROMETER = (1 << 0),

    SENSOR_TYPE_MAGNETIC_FIELD = (1 << 1),

    SENSOR_TYPE_GYROSCOPE = (1 << 2),

    SENSOR_TYPE_LIGHT = (1 << 3),

    SENSOR_TYPE_TEMPERATURE = (1 << 4),

    SENSOR_TYPE_AMBIENT_TEMPERATURE = (1 << 5),

    SENSOR_TYPE_PRESSURE = (1 << 6),

    SENSOR_TYPE_PROXIMITY = (1 << 7),

    SENSOR_TYPE_RELATIVE_HUMIDITY = (1 << 8),

    SENSOR_TYPE_ROTATION_VECTOR = (1 << 9),

    SENSOR_TYPE_ALTITUDE = (1 << 10),

    SENSOR_TYPE_WEIGHT = (1 << 11),

    SENSOR_TYPE_LINEAR_ACCEL = (1 << 12),

    SENSOR_TYPE_GRAVITY = (1 << 13),

    SENSOR_TYPE_EULER = (1 << 14),

    SENSOR_TYPE_COLOR = (1 << 15),




    SENSOR_TYPE_USER_DEFINED_1 = (1 << 26),

    SENSOR_TYPE_USER_DEFINED_2 = (1 << 27),

    SENSOR_TYPE_USER_DEFINED_3 = (1 << 28),

    SENSOR_TYPE_USER_DEFINED_4 = (1 << 29),

    SENSOR_TYPE_USER_DEFINED_5 = (1 << 30),

    SENSOR_TYPE_USER_DEFINED_6 = (1 << 31),

    SENSOR_TYPE_ALL = 0xFFFFFFFF
} sensor_type_t;
typedef enum {

    SENSOR_EVENT_TYPE_DOUBLE_TAP = (1 << 0),

    SENSOR_EVENT_TYPE_SINGLE_TAP = (1 << 1),

    SENSOR_EVENT_TYPE_FREE_FALL = (1 << 2),

    SENSOR_EVENT_TYPE_SLEEP_CHANGE = (1 << 3),

    SENSOR_EVENT_TYPE_WAKEUP = (1 << 4),

    SENSOR_EVENT_TYPE_SLEEP = (1 << 5),

    SENSOR_EVENT_TYPE_ORIENT_CHANGE = (1 << 6),

    SENSOR_EVENT_TYPE_ORIENT_X_CHANGE = (1 << 7),

    SENSOR_EVENT_TYPE_ORIENT_Y_CHANGE = (1 << 8),

    SENSOR_EVENT_TYPE_ORIENT_Z_CHANGE = (1 << 9),

    SENSOR_EVENT_TYPE_ORIENT_X_L_CHANGE = (1 << 10),

    SENSOR_EVENT_TYPE_ORIENT_Y_L_CHANGE = (1 << 11),

    SENSOR_EVENT_TYPE_ORIENT_Z_L_CHANGE = (1 << 12),

    SENSOR_EVENT_TYPE_ORIENT_X_H_CHANGE = (1 << 13),

    SENSOR_EVENT_TYPE_ORIENT_Y_H_CHANGE = (1 << 14),

    SENSOR_EVENT_TYPE_ORIENT_Z_H_CHANGE = (1 << 15),
} sensor_event_type_t;
struct sensor_cfg {




    uint8_t sc_valtype;

    uint8_t _reserved[3];
};
typedef union {
    struct sensor_mag_data *smd;
    struct sensor_accel_data *sad;
    struct sensor_euler_data *sed;
    struct sensor_quat_data *sqd;
    struct sensor_accel_data *slad;
    struct sensor_accel_data *sgrd;
    struct sensor_gyro_data *sgd;
    struct sensor_temp_data *std;
    struct sensor_temp_data *satd;
    struct sensor_light_data *sld;
    struct sensor_color_data *scd;
    struct sensor_press_data *spd;
    struct sensor_humid_data *srhd;
}sensor_data_t;
typedef int (*sensor_data_func_t)(struct sensor *, void *, void *,
             sensor_type_t);
typedef int
(*sensor_trigger_notify_func_t)(struct sensor *, void *, sensor_type_t);
typedef int
(*sensor_trigger_cmp_func_t)(sensor_type_t, sensor_data_t *,
                             sensor_data_t *, void *);
typedef int
(*sensor_notifier_func_t)(struct sensor *, void *, sensor_event_type_t);
typedef void
(*sensor_error_func_t)(struct sensor *sensor, void *arg, int status);
struct sensor_listener {




    sensor_type_t sl_sensor_type;


    sensor_data_func_t sl_func;


    void *sl_arg;




    struct { struct sensor_listener *sle_next; } sl_next;
};
struct sensor_notifier {




    sensor_event_type_t sn_sensor_event_type;




    sensor_notifier_func_t sn_func;


    void *sn_arg;




    struct { struct sensor_notifier *sle_next; } sn_next;
};
struct sensor_read_ev_ctx {

    struct sensor *srec_sensor;

    sensor_type_t srec_type;
};
struct sensor_type_traits {

    sensor_type_t stt_sensor_type;


    sensor_data_t stt_low_thresh;


    sensor_data_t stt_high_thresh;


    uint8_t stt_algo;


    uint16_t stt_poll_n;

    uint16_t stt_polls_left;






    sensor_trigger_cmp_func_t stt_trigger_cmp_algo;






    struct sensor *stt_sensor;




    struct { struct sensor_type_traits *sle_next; } stt_next;
};
struct sensor_notify_ev_ctx {

    struct sensor *snec_sensor;

    sensor_event_type_t snec_evtype;
};
struct sensor_notify_os_ev {

    struct os_event snoe_evt;

    sensor_event_type_t snoe_evtype;

    struct sensor *snoe_sensor;
};
struct sensor_driver {
    sensor_read_func_t sd_read;
    sensor_get_config_func_t sd_get_config;
    sensor_set_config_func_t sd_set_config;
    sensor_set_trigger_thresh_t sd_set_trigger_thresh;
    sensor_clear_trigger_thresh_t sd_clear_low_trigger_thresh;
    sensor_clear_trigger_thresh_t sd_clear_high_trigger_thresh;
    sensor_set_notification_t sd_set_notification;
    sensor_unset_notification_t sd_unset_notification;
    sensor_handle_interrupt_t sd_handle_interrupt;
    sensor_reset_t sd_reset;
};
struct sensor_timestamp {
    struct os_timeval st_ostv;
    struct os_timezone st_ostz;
    uint32_t st_cputime;
};
struct sensor_itf {






    uint8_t si_type;


    uint8_t si_num;


    uint8_t si_cs_pin;


    uint16_t si_addr;


    struct os_mutex *si_lock;



    uint8_t si_low_pin;


    uint8_t si_high_pin;




    struct sensor_int si_ints[(2)];
};
struct sensor {



    struct os_dev *s_dev;


    struct os_mutex s_lock;






    sensor_type_t s_types;


    sensor_type_t s_mask;



    uint32_t s_poll_rate;


    os_time_t s_next_run;




    struct sensor_driver *s_funcs;


    struct sensor_timestamp s_sts;


    struct sensor_itf s_itf;


    struct os_event s_interrupt_evt;




    struct { struct sensor_listener *slh_first; } s_listener_list;


    sensor_error_func_t s_err_fn;
    void *s_err_arg;




    struct { struct sensor_notifier *slh_first; } s_notifier_list;


    struct { struct sensor_type_traits *slh_first; } s_type_traits_list;


    struct { struct sensor *sle_next; } s_next;
};
struct sensor_read_ctx {
    sensor_data_func_t user_func;
    void *user_arg;
};
int sensor_read(struct sensor *sensor, sensor_type_t type,
                sensor_data_func_t data_func, void *arg,
                uint32_t timeout);
struct sensor_accel_data {
    float sad_x;
    float sad_y;
    float sad_z;


    uint8_t sad_x_is_valid:1;
    uint8_t sad_y_is_valid:1;
    uint8_t sad_z_is_valid:1;
} __attribute__((packed));
struct sensor_mag_data {
    float smd_x;
    float smd_y;
    float smd_z;

    uint8_t smd_x_is_valid:1;
    uint8_t smd_y_is_valid:1;
    uint8_t smd_z_is_valid:1;
} __attribute__((packed));
struct sensor_light_data {
    uint16_t sld_full;
    uint16_t sld_ir;
    uint32_t sld_lux;

    uint8_t sld_full_is_valid:1;
    uint8_t sld_ir_is_valid:1;
    uint8_t sld_lux_is_valid:1;
} __attribute__((packed));
struct sensor_quat_data {
    float sqd_x;
    float sqd_y;
    float sqd_z;
    float sqd_w;

    uint8_t sqd_x_is_valid:1;
    uint8_t sqd_y_is_valid:1;
    uint8_t sqd_z_is_valid:1;
    uint8_t sqd_w_is_valid:1;
} __attribute__((packed));
struct sensor_euler_data {
    float sed_h;
    float sed_r;
    float sed_p;

    uint8_t sed_h_is_valid:1;
    uint8_t sed_r_is_valid:1;
    uint8_t sed_p_is_valid:1;
} __attribute__((packed));
struct sensor_color_data {
    uint16_t scd_r;
    uint16_t scd_g;
    uint16_t scd_b;
    uint16_t scd_c;
    uint16_t scd_lux;
    uint16_t scd_colortemp;




    uint16_t scd_saturation;
    uint16_t scd_saturation75;
    uint8_t scd_is_sat;
    float scd_cratio;
    uint16_t scd_maxlux;
    uint16_t scd_ir;


    uint16_t scd_r_is_valid:1;
    uint16_t scd_g_is_valid:1;
    uint16_t scd_b_is_valid:1;
    uint16_t scd_c_is_valid:1;
    uint16_t scd_lux_is_valid:1;
    uint16_t scd_colortemp_is_valid:1;
    uint16_t scd_saturation_is_valid:1;
    uint16_t scd_saturation75_is_valid:1;
    uint16_t scd_is_sat_is_valid:1;
    uint16_t scd_cratio_is_valid:1;
    uint16_t scd_maxlux_is_valid:1;
    uint16_t scd_ir_is_valid:1;
} __attribute__((packed));
struct sensor_temp_data {
    float std_temp;


    uint8_t std_temp_is_valid:1;
} __attribute__((packed));
struct sensor_press_data {
    float spd_press;


    uint8_t spd_press_is_valid:1;
} __attribute__((packed));
struct sensor_humid_data {
    float shd_humid;


    uint8_t shd_humid_is_valid:1;
} __attribute__((packed));
struct sensor_gyro_data {
    float sgd_x;
    float sgd_y;
    float sgd_z;

    uint8_t sgd_x_is_valid:1;
    uint8_t sgd_y_is_valid:1;
    uint8_t sgd_z_is_valid:1;
} __attribute__((packed));
int
sensor_read(struct sensor *sensor, sensor_type_t type,
        sensor_data_func_t data_func, void *arg, uint32_t timeout)
{
    struct sensor_read_ctx src;
    int rc;

    rc = sensor_lock(sensor);
    if (rc) {
        goto err;
    }

    src.user_func = data_func;
    src.user_arg = arg;

    if (!sensor_mgr_match_bytype(sensor, (void *)&type)) {
        rc = (-4);
        goto err;
    }

    sensor_up_timestamp(sensor);

    rc = sensor->s_funcs->sd_read(sensor, type, sensor_read_data_func, &src,
                                  timeout);
    if (rc) {
        if (sensor->s_err_fn != 
# 2202 "repos/apache-mynewt-core/hw/sensor/src/sensor.c" 3 4
                               ((void *)0)
# 2202 "repos/apache-mynewt-core/hw/sensor/src/sensor.c"
                                   ) {
            sensor->s_err_fn(sensor, sensor->s_err_arg, rc);
        }
        goto err;
    }

err:
    sensor_unlock(sensor);
    return (rc);
}